--- a/www/index.html
+++ b/www/index.html
@@ -20,14 +20,19 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
+    
   </head>
-  <body ng-app="starter">
+  <body ng-app="golfFriends" ng-controller="PlayerCtrl">
 
     <ion-pane>
       <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
+        <h1 class="title">GolfFriends Live</h1>
       </ion-header-bar>
       <ion-content>
+          {{player.firstName}} {{player.lastName}}
+          {{scorecard.hole1}}
       </ion-content>
     </ion-pane>
   </body>
